test/files/invalid/invalid_enum_default.stderr
error: 
  ┌─ test/files/invalid/invalid_enum_default.fbs:4:12
  │
4 │   x: Foo = 18;
  │            ^^ Expression does not map to a valid enum variant

Error: Bailing because of errors
